--- a/src/AiRecruiterCodeBase/Dointo.AiRecruiter.InterviewClient/Components/Layout/MainLayout.razor
+++ b/src/AiRecruiterCodeBase/Dointo.AiRecruiter.InterviewClient/Components/Layout/MainLayout.razor
@@ -1,13 +1,12 @@
 ﻿@inherits LayoutComponentBase
 
 <div class="page">
-    <div class="sidebar">
-        <NavMenu />
-    </div>
-
     <main>
-        <div class="top-row px-4">
+        <div class="top-row px-4 py-2">
+          <div class="d-flex flex-row justify-content-between items-center">
+            <h4>Ai Recruiter</h4>
             <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
+          </div>
         </div>
 
         <article class="content px-4">
